@@ -31,8 +31,8 @@ cross-compilation process.</p>
   also sufficiently flexible that it can also be used for only one or
   several of these steps.</li>
 
-  <li>Is <b>very easy</b> to set up, thanks to its menuconfig and
-  xconfig configuration interfaces, familiar to all embedded Linux
+  <li>Is <b>very easy</b> to set up, thanks to its menuconfig, gconfig
+  and xconfig configuration interfaces, familiar to all embedded Linux
   developers. Building a basic embedded Linux system with Buildroot
   typically takes 15-30 minutes.</li>
 
